# bump-detection

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/src/bump_api/: __init__.py  db.py  main.py  redis_consumer.py  ws.py
db/: init.sql
docs/: CONTRACTS.md
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts  useWebSocket.ts
frontend/src/components/: AlertBanner.tsx  HistoricalView.tsx  LiveView.tsx
inference/: Dockerfile  pyproject.toml  requirements.txt
inference/src/bump_inference/: __main__.py  classifier.py  pipeline.py  service.py
ingestion/: Dockerfile  pyproject.toml  requirements.txt
ingestion/src/bump_ingestion/: __init__.py  __main__.py  replayer.py  sources.py
shared/: pyproject.toml
shared/bump_common/: __init__.py  beats.py  constants.py  metrics.py  redis_streams.py  schemas.py  signal.py
tests/: _helpers.py  conftest.py
tests/integration/: test_pipeline_latency.py
tests/unit/: test_api.py  test_inference_wrapper.py  test_rpeak_accuracy.py  test_rr_hr_math.py  test_schemas.py
training/: dataset.py  metrics.json  model.py  requirements.txt  train.py
