# Root dev-tooling config (per-service packaging lives in each service's
# pyproject.toml). This file configures ruff + pytest for the whole repo.

[project]
name = "bump"
version = "0.1.0"
description = "BUMP — real-time bradycardia/arrhythmia detection pipeline"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["ruff>=0.4", "pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
# So tests can import the services without installing every one as a package.
pythonpath = ["shared", "inference/src", "ingestion/src", "api/src", "training", "tests"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: hits PhysioNet (MIT-BIH download); skipped if unreachable",
    "integration: drives the full detection pipeline",
    "redis: needs a reachable Redis server",
]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]
